--- a/src/Demo/WebTest/appsettings.json
+++ b/src/Demo/WebTest/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ssss" : 2,
+  "Password" : "**********"
 }
